# matrix

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md
benchmark_matrix/: CMakeLists.txt
benchmark_matrix/include/: common_tools.h  cxdbl_mat_op.h
benchmark_matrix/src/: common_tools.cpp  cxdbl_mat_op.cpp  main.cpp
cmake/: googletest.cmake
matrix_impl/: CMakeLists.txt  LICENSE  configure_matrix.h.in
matrix_impl/cmake/: FindCBLAS.cmake
matrix_impl/include/: AdvancedFunctionsImpl.hpp  CMakeLists.txt  Matrix.h  MatrixExponential.hpp  MatrixImpl.hpp  OperatorsImpl.hpp  common.h  errors.h  openblas_config.h  operators_impl.hpp
matrix_impl/include/blas_wrapper/: blas_functions.h  blas_level1.h  blas_level2.h  blas_level3.h  cblas_common.h  cblas_functions.h  cblas_level1.h  cblas_level2.h  cblas_level3.h  eigen.h  linsol.h
matrix_impl/include/matrix_core/: AdvancedFunctionsImpl.hpp  Matrix.h  MatrixExponential.hpp  MatrixImpl.hpp  OperatorsImpl.hpp  aligned_ptr.h  common.h  errors.h
matrix_impl/include/matrix_core/matrix_exp_impl/: norm_estimate.hpp
matrix_impl/include/matrix_exp_impl/: indices.hpp  norm_estimate.hpp
matrix_impl/src/: CMakeLists.txt  common.cpp
matrix_impl/src/blas_wrapper/: blas_level1.cpp  blas_level2.cpp  blas_level3.cpp  cblas_level1.cpp  cblas_level2.cpp  cblas_level3.cpp  eigen.cpp  linsol.cpp
matrix_impl/src/matrix_core/: AdvancedFunctionsImpl.cpp
tests/: CMakeLists.txt  test_eigen.cpp  test_kronecker_product.cpp  test_log2int.cpp  test_lstsq.cpp  test_matrices.cpp  test_matrix_ComplexDbl.cpp  test_matrix_complex_double.cpp  test_matrix_double.cpp  test_matrix_exp.cpp  test_matrix_exp_ell.cpp  test_matrix_int.cpp  test_matrix_minus.cpp  test_matrix_normest.cpp  test_matrix_plus.cpp  test_matrix_pow.cpp  test_matrix_scale.cpp  test_projection.cpp  test_trace.cpp
